# swaf

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Rocket.toml  api_test.http
.github/workflows/: main.yml
dev-proxy/: docker-compose.yml  haproxy.cfg
docker/: run.sh
docker/default_policy/groups/: admins.json  fullFileAccess.json
docker/default_policy/users/: root.json
spa/: .gitignore  elm.json
spa/public/: index.html
spa/review/: elm.json
spa/review/suppressed/: NoUnused.CustomTypeConstructors.json  NoUnused.Exports.json  NoUnused.Parameters.json  NoUnused.Variables.json  Simplify.json
spa/src/: Api.elm  Auth.elm  CrudView.elm  Editing.elm  Icons.elm  Indexed.elm  Into.elm  Layout.elm  Model.elm  PasswordReset.elm  PolicyEditor.elm  PolicyTable.elm  Shared.elm  Util.elm
spa/src/Api/: Response.elm
spa/src/Model/: FileChildren.elm  FileMetadata.elm  GroupInfo.elm  GroupList.elm  PolicyEffect.elm  PolicyStatement.elm  UserInfo.elm  UserList.elm
spa/src/Pages/: Browse.elm  Home_.elm  NotFound.elm  SignIn.elm  SignOut.elm
spa/src/Pages/Admin/: Groups.elm  Users.elm
spa/src/Pages/Admin/Group/: Name_.elm
spa/src/Pages/Admin/User/: Name_.elm
spa/src/Ux/: InputField.elm  TextInputField.elm
spa/tests/: IntoTests.elm  ModelTests.elm  Tests.elm
src/: auth.rs  config.rs  files.rs  hook.rs  lib.rs  main.rs  meta.rs  policy.rs  util.rs
src/auth/: authorizor.rs  policy.rs  policy_tests.rs  session.rs
src/auth/store/: files.rs
