# swaf - Sufficient Web Access to Files
[package]
name = "swaf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version="0.5.0-rc.2", features=["secrets", "json"] }
wildflower = "0.1.1"
futures = {} # Use whatever version rocket is bringing in
log = {} # Use whatever version rocket is bringing in
